[project]
name = "runway-mcp"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.2,<2",
    "pydantic>=2",
    "requests",
    "beautifulsoup4",
    "rapidfuzz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "responses",
]
browser = [
    "playwright>=1.40",
]

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "contract: contract tests that pin the Pydantic output shape",
    "integration: tests that launch or import the full server",
]
